// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workers/repository/onboarding/pr/config-description > getConfigDesc() > include retry/refresh checkbox message only if onboardingRebaseCheckbox is true 1`] = `
"
### Configuration Summary

Based on the default config's presets, Renovate will:

  - Start dependency updates only once this onboarding PR is merged
  - Run Renovate on following schedule: before 5am

---
"
`;

exports[`workers/repository/onboarding/pr/config-description > getConfigDesc() > returns a full list 1`] = `
"
### Configuration Summary

Based on the default config's presets, Renovate will:

  - Start dependency updates only once this onboarding PR is merged
  - description 1
  - description two
  - something else
  - this is Docker-only

---
"
`;
